 * User interface:
   * Fixed (bug #17220): Cursor in gui2 text box now behaves appropriately after
     text box overflow occurs.
   * Change Difficulty checkbox in Load Game dialog in GUI1 gets disabled if
     change in difficulty of a loading game won't take effect (bug #20381).
   * Fixed 'end turn' button's state issue: button stays disabled after the first turn.
 * WML engine:
   * Fixed invalid memory access issues caused by subnamespaced persistent WML
     variables (bug #20385).
   * fix negative gold carried over (bug #20676)
   * Allow filtering on controller= in SSFs. Cannot be used in networked multiplayer.
 * Miscellaneous and bug fixes
   * Switched to git version control. Hosting moved to SourceForge
   * Improved: Autorevision based revision numbers in CMake.
   * Don't let petrified units reveal ambushers

Version 1.11.2:
 * Add-ons client:
   * Fixed bug #20518: identical add-ons titles not supported
   * Add a button to the Filter Options dialog to toggle all currently
     displayed add-on categories at once
 * AI:
   * Experimental Multiplayer AI
     * Improve recruitment, notably first turn choices and units with poison
       and charge
     * Improved selection of units for village stealing
     * Remove dependency on AI-demos add-on
     * Fix bug when playing on maps with a turn limit
     * Fix bug handling regeneration
     * Minor improvements in switching between castles
     * Add healer support micro AI to improve healer use
     * Improved village capturing
     * Retreat badly injured units more effectively
   * New [micro_ai] tag, 18 different Micro AIs, and 14 test scenarios
     * This includes AIs for 7 different animal behaviors, bottleneck defense,
       2 different guardians and a coward, healer support, lurkers,
       messenger escort, patrol, protect and move a unit, and 2 alternative
       recruiting strategies.
     * Documentation at http://wiki.wesnoth.org/Micro_AIs