@@ -308,7 +308,7 @@
 
 		automatic_placement = "false"
 
-		x = 0
+		x = "(gamemap_x_offset)"
 		y = 30
 		width = "(gamemap_width)"
 		height = "(screen_height - 30)"
@@ -540,7 +540,7 @@ if(gamemap_width - ({__GUI_IMAGE_WIDTH}) > {MAX_TEXT_WIDTH}
 
 		automatic_placement = "false"
 
-		x = 0
+		x = "(gamemap_x_offset)"
 		y = 30
 		width = "(gamemap_width)"
 		height = "(screen_height - 30)"
