@@ -10,6 +10,8 @@ Version 1.11.2+dev:
    * Change Difficulty checkbox in Load Game dialog in GUI1 gets disabled if
      change in difficulty of a loading game won't take effect (bug #20381).
    * Fixed 'end turn' button's state issue: button stays disabled after the first turn.
+   * Fixed bug #20592: dialog (wml_message.cfg) is shifted by the
+     distance between the left edge of the screen and the game map
  * WML engine:
    * Fixed invalid memory access issues caused by subnamespaced persistent WML
      variables (bug #20385).
